--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,3 +1,4 @@
+<%provide(:title, "Help")%>
 <h1>Help</h1>
 <p>
   Get help on the Ruby on Rails Tutorial at the
@@ -6,3 +7,4 @@
   <a href="https://www.railstutorial.org/book"><em>Ruby on Rails Tutorial</em>
   book</a>.
 </p>
+
